--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13536,6 +13536,14 @@ button:hover {
   padding: 10px;
   width: 100%;
 }
+.input-control textarea {
+  border: 2px solid #f0f0f0;
+  border-radius: 4px;
+  display: block;
+  font-style: 12px;
+  padding: 10px;
+  width: 100%;
+}
 
 .input-control input:focus {
   outline: 0;
@@ -13546,6 +13554,14 @@ button:hover {
 }
 
 .input-control.error input {
+  border-color: #ff3860;
+}
+
+.input-control.success textarea {
+  border-color: #09c372;
+}
+
+.input-control.error textarea {
   border-color: #ff3860;
 }
 
