--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -65,6 +65,14 @@
         padding: 10px;
         width: 100%;
     }
+    textarea{
+        border: 2px solid #f0f0f0;
+        border-radius: 4px;
+        display: block;
+        font-style: 12px;
+        padding: 10px;
+        width: 100%;
+    }
 }
 
 .input-control input:focus{
@@ -78,8 +86,18 @@
     border-color: $error;
 }
 
+.input-control.success textarea{
+    border-color: $correct;
+}
+.input-control.error textarea{
+    border-color: $error;
+}
+
 .input-control .error{
     color: $error;
     font-size: 9px;
     height: 13px;
 }
+
+
+
