Testing git branch/merge

--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -31,7 +31,7 @@
 
     <main>
         <div class="containerForm">
-            <form id="form" action="/registration" method="POST">
+            <form id="form" action="/registration/submit" method="POST" autocomplete="off">
                 <h2><strong>Registration</strong></h2>
                 <div class="input-control">
                     <label for="fname"><strong>First Name</strong></label>
