--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/main.css">
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script defer src="js/registration.js"></script>
+    <script defer src="/js/registration.js"></script>
     <title>Test</title>
 </head>
 
@@ -31,8 +30,18 @@
 
     <main>
         <div class="containerForm">
-            <form id="form" action="/registration" method="POST">
+            <form id="form" action="/register/submit" method="POST" autocomplete="off">
                 <h2><strong>Registration</strong></h2>
+                <div class="input-control">
+                    <label for="fname"><strong>First Name</strong></label>
+                    <input id="fname" name="fname" type="text">
+                    <div class="error"></div>
+                </div>
+                <div class="input-control">
+                    <label for="lname"><strong>Last Name</strong></label>
+                    <input id="lname" name="lname" type="text">
+                    <div class="error"></div>
+                </div>
                 <div class="input-control">
                     <label for="email"><strong>Email</strong></label>
                     <input id="email" name="email" type="text">
