Remove some fields in forms

--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -52,6 +52,11 @@
                     <input id="password" name="password" type="password">
                     <div class="error"></div>
                 </div>
+                <div class="input-control">
+                    <label for="password2"><strong>Confirm Password</strong> </label>
+                    <input id="password2" name="password2" type="password">
+                    <div class="error"></div>
+                </div>
                 <button type="submit"><strong>Sign Up</strong></button>
 
             </form>
