--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/main.css">
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script defer src="js/Animation.js"></script>
     <title>Test</title>
 </head>
 
@@ -27,9 +28,9 @@
         </nav>
         <a class="cta" href="/contacts"><button>Contact</button></a>
     </header>
-    <main class="fadein">
+    <main>
         <div class="container">
-            <div class="row justify-content-center">
+            <div class="row justify-content-center hidden">
                 <div class="col-sm-12 col-md-12 col-xlg-12" style="position:relative; top: 100px;">
                     <h2 class="text-center">Welcome to the University Events Portal4</h2>
                 </div>
@@ -45,7 +46,7 @@
         <div class="container">
             <div class="row justify-content-center gy-3">
                 <div class="col-sm-6 col-md-6 col-xlg-6" style="position:relative; top: 100px;">
-                    <div class="card text-center h-100" style="background-color: #32333a">
+                    <div class="card text-center h-100 hidden c1" style="background-color: #32333a">
                         <div class="card-body">
                             <h5>Effortless Event Creation</h5>
                             <p class="card-text">Faculty members can effortlessly create and manage events, including
@@ -55,7 +56,7 @@
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-6 col-xlg-6" style="position:relative; top: 100px;">
-                    <div class="card text-center h-100" style="background-color: #32333a">
+                    <div class="card text-center h-100 hidden c1" style="background-color: #32333a">
                         <div class="card-body">
                             <h5>Seamless Event Registration:</h5>
                             <p class="card-text">Students can easily register for events, view event details, and manage
@@ -65,7 +66,7 @@
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-6 col-xlg-6" style="position:relative; top: 100px;">
-                    <div class="card text-center h-100" style="background-color: #32333a">
+                    <div class="card text-center h-100 hidden c2" style="background-color: #32333a">
                         <div class="card-body">
                             <h5>Comprehensive Event Visibility</h5>
                             <p class="card-text">Gain real-time insights into event attendance and registered users. View a
@@ -75,7 +76,7 @@
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-6 col-xlg-6" style="position:relative; top: 100px;">
-                    <div class="card text-center h-100" style="background-color: #32333a">
+                    <div class="card text-center h-100 hidden c2" style="background-color: #32333a">
                         <div class="card-body">
                             <h5>Unified Event History</h5>
                             <p class="card-text">Access a comprehensive record of upcoming and past events. View event
@@ -85,7 +86,7 @@
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-6 col-xlg-6" style="position:relative; top: 100px;">
-                    <div class="card text-center h-100" style="background-color: #32333a">
+                    <div class="card text-center h-100 hidden c3" style="background-color: #32333a">
                         <div class="card-body">
                             <h5>Unified Event History</h5>
                             <p class="card-text">Access a comprehensive record of upcoming and past events. View event
@@ -95,7 +96,7 @@
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-6 col-xlg-6" style="position:relative; top: 100px;">
-                    <div class="card text-center h-100" style="background-color: #32333a">
+                    <div class="card text-center h-100 hidden c3" style="background-color: #32333a">
                         <div class="card-body">
                             <h5>Enhanced Collaboration and Engagement</h5>
                             <p class="card-text">Foster a vibrant campus community by facilitating event participation and
@@ -105,7 +106,7 @@
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-6 col-xlg-6" style="position:relative; top: 100px;">
-                    <div class="card text-center h-100" style="background-color: #32333a">
+                    <div class="card text-center h-100 hidden c4" style="background-color: #32333a">
                         <div class="card-body">
                             <h5>Optimize Your University's Event Management</h5>
                             <p class="card-text">Our cloud-based platform simplifies event management, enhances student
