--- a/views/attendance.ejs
+++ b/views/attendance.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/main.css">
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="js/events.js"></script>
+    <script defer src="js/Animation.js"></script> 
     <title>Test</title>
 </head>
 
@@ -30,7 +31,7 @@
     </header>
 
 
-    <div class="container">
+    <div class="container hidden">
         <div class="row justify-content-center">
             <div class="col-sm-12 col-md-12 col-xlg-12" style="position:relative; top: 100px;">
                 <h2 class="text-center">Welcome to the Your Events</h2>
@@ -51,7 +52,7 @@
         </div>
     </div>
 
-    <main>
+    <main class="hidden c1">
         <div class="table-responsive" style="position: relative; top: 100px;">
             <table class="table table-dark table-striped table-hover caption-top">
                 <caption><strong>List of Your Events</strong></caption>
@@ -81,7 +82,7 @@
 
     </main>
 
-    <main>
+    <main class="hidden c2">
         <div class="containerForm">
             <form id="form" action="/">
                 <h2><strong>Create Event</strong></h2>
