--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -29,7 +29,7 @@
         <a class="cta" href="/contacts"><button>Contact</button></a>
     </header>
 
-    <div class="container">
+    <div class="container fadein">
         <div class="row justify-content-center">
             <div class="col-sm-12 col-md-12 col-xlg-12" style="position:relative; top: 100px;">
                 <h2 class="text-center">Contact Us</h2>
