--- a/views/events.ejs
+++ b/views/events.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/main.css">
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script defer src="js/login.js"></script>
+    <script defer src="js/Animation.js"></script>
     <title>Test</title>
 </head>
 
@@ -31,10 +31,10 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-sm-12 col-md-12 col-xlg-12" style="position:relative; top: 100px;">
+            <div class="col-sm-12 col-md-12 col-xlg-12 hidden" style="position:relative; top: 100px;">
                 <h2 class="text-center">Welcome to the University Events List</h2>
             </div>
-            <div class="col-sm-12 col-md-12 col-xlg-12" style="position:relative; top: 100px;">
+            <div class="col-sm-12 col-md-12 col-xlg-12 hidden c1" style="position:relative; top: 100px;">
                 <div class="card text-center h-100" style="background-color: #32333a">
                     <div class="card-body">
                         <p class="sm-view">
@@ -59,7 +59,7 @@
         </div>
     </div>
 
-    <main>
+    <main class="hidden c2">
         <div class="table-responsive" style="position: relative; top: 100px;">
             <table class="table table-dark table-striped table-hover caption-top">
                 <caption><strong>List of Events</strong></caption>
