--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/main.css">
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="js/login.js"></script>
+    <script defer src="js/Animation.js"></script>
     <title>Test</title>
 </head>
 
@@ -31,10 +32,10 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-sm-12 col-md-12 col-xlg-12" style="position:relative; top: 100px;">
+            <div class="col-sm-12 col-md-12 col-xlg-12 hidden" style="position:relative; top: 100px;">
                 <h2 class="text-center">Welcome to the University Events Portal</h2>
             </div>
-            <div class="col-sm-6 col-md-8 col-xlg-10" style="position:relative; top: 100px;">
+            <div class="col-sm-6 col-md-8 col-xlg-10 hidden c1" style="position:relative; top: 100px;">
                 <div class="card text-center h-100" style="background-color: #32333a">
                     <div class="card-body">
                         <p class="card-text">your gateway to engaging university events. Faculty members can effortlessly
@@ -48,7 +49,7 @@
     </div>
 
     <main>
-        <div class="containerForm">
+        <div class="containerForm hidden c1">
             <form id="form" action="/" method="POST">
                 <h2><strong>Login</strong></h2>
                 <div class="input-control">
