--- a/views/report.ejs
+++ b/views/report.ejs
@@ -30,7 +30,7 @@
     </header>
 
 
-    <div class="container">
+    <div class="container fadein">
         <div class="row justify-content-center">
             <div class="col-sm-12 col-md-12 col-xlg-12" style="position:relative; top: 100px;">
                 <h2 class="text-center">Welcome to the Your Events statistics</h2>
@@ -52,7 +52,7 @@
     </div>
 
     <main>
-
+ß
 
     </main>
 
