--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/main.css">
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="js/login.js"></script>
+    <script defer src="js/Animation.js"></script>
     <title>Test</title>
 </head>
 
@@ -27,7 +28,6 @@
             </ul>
         </nav>
         <a class="cta" href="/contacts"><button>Contact</button></a>
-        <a class="cta" href="/sessionLogout"><button>Logout</button></a>
     </header>
 
     <div class="container">
@@ -49,10 +49,19 @@
     </div>
 
     <main>
-        <div class="containerForm">
+        <div class="containerForm hidden c1">
             <form id="form" action="/" method="POST">
                 <h2><strong>Login</strong></h2>
-
+                <div class="input-control">
+                    <label for="fname"><strong>First Name</strong></label>
+                    <input id="fname" name="fname" type="text">
+                    <div class="error"></div>
+                </div>
+                <div class="input-control">
+                    <label for="lname"><strong>Last Name</strong></label>
+                    <input id="lname" name="lname" type="text">
+                    <div class="error"></div>
+                </div>
                 <div class="input-control">
                     <label for="email"><strong>Email</strong></label>
                     <input id="email" name="email" type="text">
@@ -61,6 +70,11 @@
                 <div class="input-control">
                     <label for="password"><strong>Password</strong></label>
                     <input id="password" name="password" type="password">
+                    <div class="error"></div>
+                </div>
+                <div class="input-control">
+                    <label for="password2"><strong>Confirm Password</strong> </label>
+                    <input id="password2" name="password2" type="password">
                     <div class="error"></div>
                 </div>
                 <button type="submit"><strong>Sign Up</strong></button>
