start of front end improvements
moved the create Event form to its separate  page that is linked by a button in attendance.ejs. Add a colour gradient to the website . and improved the responsiveness  of the forms

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -36,6 +36,11 @@ header{
 }
 
 button{
+    font-family:"Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: $offwhite;
+    text-decoration: none;
     padding: 9px 25px;
     background-color: $offteal;
     border: none;
