--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13367,7 +13367,6 @@ textarea.form-control-lg {
 
 body {
   font-family: arial;
-  background-color: #24252A;
   min-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -13376,6 +13375,8 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#24252A), to(black));
+  background-image: linear-gradient(180deg, #24252A, black);
 }
 body h5, body .h5, body h2, body .h2, body p {
   color: aliceblue;
@@ -13444,6 +13445,11 @@ header h1, header .h1 {
 }
 
 button {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: #edf0f1;
+  text-decoration: none;
   padding: 9px 25px;
   background-color: rgb(0, 136, 169);
   border: none;
@@ -13518,7 +13524,36 @@ button:hover {
   border: none;
   border-radius: 4px;
 }
+#form button:hover {
+  background-color: rgba(0, 136, 169, 0.8);
+}
 
+@media screen and (max-width: 900px) {
+  #form {
+    width: 80%;
+    max-width: 20vh auto 0 auto;
+    padding: 20px;
+    background-color: #edf0f1;
+    border-radius: 4px;
+    font-size: 12px;
+  }
+  #form h2, #form .h2 {
+    color: #000;
+    text-align: center;
+  }
+  #form button {
+    padding: 10px;
+    margin-top: 10px;
+    width: 100%;
+    color: white;
+    background-color: rgb(0, 136, 169);
+    border: none;
+    border-radius: 4px;
+  }
+  #form button:hover {
+    background-color: rgba(0, 136, 169, 0.8);
+  }
+}
 .input-control {
   display: -webkit-box;
   display: -ms-flexbox;
