--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -14,6 +14,8 @@
     justify-content: center;
     align-items: center;
     min-height: 75vh;
+    
+   
 }
 
 
@@ -44,10 +46,40 @@
         background-color: $offteal;
         border: none;
         border-radius: 4px;
+        &:hover{
+            background-color: rgba(0,136,169,0.8);
+        }
 
     }
 }
 
+@media screen and (max-width: 900px) {
+    #form{
+        width: 80%;
+        max-width: 20vh auto 0 auto;
+        padding: 20px;
+        background-color: $offwhite;
+        border-radius: 4px;
+        font-size: 12px;
+        h2{
+            color: #000;
+            text-align: center;
+        }
+        button{
+            padding: 10px;
+            margin-top: 10px;
+            width: 100%;
+            color: white;
+            background-color: $offteal;
+            border: none;
+            border-radius: 4px;
+            &:hover{
+                background-color: rgba(0,136,169,0.8);
+            }
+    
+        }
+    }
+}
 
 
 
