--- a/views/attendance.ejs
+++ b/views/attendance.ejs
@@ -53,7 +53,7 @@
     </div>
 
     <main class="hidden c1">
-        <div class="table-responsive" style="position: relative; top: 100px;">
+        <div class="table-responsive " style="position: relative; top: 100px;">
             <table class="table table-dark table-striped table-hover caption-top">
                 <caption><strong>List of Your Events</strong></caption>
                 <thead>
@@ -80,43 +80,16 @@
             </table>
         </div>
 
-    </main>
-
-    <main class="hidden c2">
-        <div class="containerForm">
-            <form id="form" action="/">
-                <h2><strong>Create Event</strong></h2>
-                <div class="input-control">
-                    <label for="eventName"><strong>Event Name</strong></label>
-                    <input id="eventName" name="eventName" type="text">
-                    <div class="error"></div>
-                </div>
-                <div class="input-control">
-                    <label for="eventLocation"><strong>Event Location</strong></label>
-                    <input id="eventLocation" name="eventLocation" type="text">
-                    <div class="error"></div>
-                </div>
-                <div class="input-control">
-                    <label for="eventDate"><strong>Event Date</strong></label>
-                    <input id="eventDate" name="eventDate" type="date">
-                    <div class="error"></div>
-                </div>
-                <div class="input-control">
-                    <label for="eventDescription"><strong>Description</strong></label>
-                    <textarea rows="5" placeholder="Enter description" id="eventDescription" name="eventDescription"></textarea>
-                    <div class="error"></div>
-                </div>
-                <div class="input-control">
-                    <label for="imageFile"><strong>Image file (Limit 10MB)</strong> </label>
-                    <input id="imageFile" name="imageFile" type="file">
-                    <div class="error"></div>
-                </div>
-                <button type="submit"><strong>Sign Up</strong></button>
-
-            </form>
-        </div>
+       
 
     </main>
+
+    
+
+    <section class="hidden c1 " style="position: relative; top: 150px; display: flex; align-items: center; justify-content: center;">
+        <a class="cta" href="/createE"><button>Create Event</button></a>
+    </section>
+
 
 </body>
 
