--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13367,6 +13367,8 @@ textarea.form-control-lg {
 
 body {
   font-family: arial;
+  background-color: #24252A;
+  height: 100%;
   min-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -13377,8 +13379,12 @@ body {
           flex-direction: column;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#24252A), to(black));
   background-image: linear-gradient(180deg, #24252A, black);
+  background-attachment: fixed;
 }
-body h5, body .h5, body h2, body .h2, body p {
+body h5, body .h5,
+body h2,
+body .h2,
+body p {
   color: aliceblue;
 }
 body caption {
