--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,20 +16,26 @@
 
 body {
     font-family: arial;
-    //background-color: $charcoal;
+    background-color: $charcoal;
+    height: 100%;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    background-image: linear-gradient(180deg,$charcoal,black);
+    background-image: linear-gradient(180deg, $charcoal, black);
+    background-attachment: fixed;
 
-    h5,h2,p {
+
+
+    h5,
+    h2,
+    p {
         color: aliceblue;
     }
 
-   
+
 
     caption {
-        position:relative;
+        position: relative;
         top: 50%;
         width: 100%;
         text-align: center;
@@ -38,26 +44,23 @@ body {
 
 }
 
-.lg-view{
-    display:inline-block;
+.lg-view {
+    display: inline-block;
 }
- 
-.sm-view{
-    display:none;
+
+.sm-view {
+    display: none;
 }
 
 @media screen and (max-width: 1000px) {
-    .lg-view{
-       display:none;
+    .lg-view {
+        display: none;
     }
 
-    .sm-view{
-       display:inline-block;
+    .sm-view {
+        display: inline-block;
     }
 }
-
-
-
 
 
 
