--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13680,3 +13680,17 @@ button:hover {
             transition-delay: 1200ms;
   }
 }
+span {
+  opacity: 0;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
+  display: inline-block;
+}
+
+span.asad {
+  opacity: 1;
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+}
