--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -57,3 +57,16 @@
         transition-delay: 1200ms;
     }
 }
+
+span {
+    opacity: 0;
+    transition: all 0.5s ease;
+    transform: translateY(50px);
+    display: inline-block;
+}
+
+span.asad {
+    opacity: 1;
+    transform: translateY(0px);
+}
+
