--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/main.css">
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="js/login.js"></script>
+    <script defer src="js/Animation.js"></script>
     <title>Test</title>
 </head>
 
@@ -15,7 +16,7 @@
 
     <header>
         <a class="nav__links" href="/">
-            <h1>Uni Auto</h1>
+            <h1 class="ani">Uni Auto</h1>
         </a>
         <nav>
             <ul class="nav__links">
