--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
 
     <header>
         <a class="nav__links" href="/">
-            <h1>Uni Auto</h1>
+            <h1 class="ani">Uni Auto</h1>
         </a>
         <nav>
             <ul class="nav__links">
