--- a/views/login.ejs
+++ b/views/login.ejs
@@ -50,18 +50,8 @@
 
     <main>
         <div class="containerForm hidden c1">
-            <form id="form" action="/" method="POST">
+            <form id="form" action="/login/submit" method="POST" autocomplete="off">
                 <h2><strong>Login</strong></h2>
-                <div class="input-control">
-                    <label for="fname"><strong>First Name</strong></label>
-                    <input id="fname" name="fname" type="text">
-                    <div class="error"></div>
-                </div>
-                <div class="input-control">
-                    <label for="lname"><strong>Last Name</strong></label>
-                    <input id="lname" name="lname" type="text">
-                    <div class="error"></div>
-                </div>
                 <div class="input-control">
                     <label for="email"><strong>Email</strong></label>
                     <input id="email" name="email" type="text">
@@ -72,12 +62,7 @@
                     <input id="password" name="password" type="password">
                     <div class="error"></div>
                 </div>
-                <div class="input-control">
-                    <label for="password2"><strong>Confirm Password</strong> </label>
-                    <input id="password2" name="password2" type="password">
-                    <div class="error"></div>
-                </div>
-                <button type="submit"><strong>Sign Up</strong></button>
+                <button id="submitBtn" type="submit"><strong>Sign Up</strong></button>
 
             </form>
         </div>
