--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -57,7 +57,7 @@
                     <input id="password2" name="password2" type="password">
                     <div class="error"></div>
                 </div>
-                <button type="submit"><strong>Sign Up</strong></button>
+                <button type="submit" id="submitBtn" ><strong>Sign Up</strong></button>
 
             </form>
         </div>
