move the updated events form
Moved the updated events form to the createE.ejs

--- a/views/createE.ejs
+++ b/views/createE.ejs
@@ -54,27 +54,26 @@
 
     <main class="hidden c2">
         <div class="containerForm">
-            <form id="form" action="/">
+            <form id="form" action="/events/create" method="POST" autocomplete="off">
                 <h2><strong>Create Event</strong></h2>
                 <div class="input-control">
-                    <label for="eventName"><strong>Event Name</strong></label>
+                    <label for="eventName"><strong>Name</strong></label>
                     <input id="eventName" name="eventName" type="text">
                     <div class="error"></div>
                 </div>
                 <div class="input-control">
-                    <label for="eventLocation"><strong>Event Location</strong></label>
+                    <label for="eventLocation"><strong>Location</strong></label>
                     <input id="eventLocation" name="eventLocation" type="text">
                     <div class="error"></div>
                 </div>
                 <div class="input-control">
-                    <label for="eventDate"><strong>Event Date</strong></label>
+                    <label for="eventDate"><strong>Date</strong></label>
                     <input id="eventDate" name="eventDate" type="date">
                     <div class="error"></div>
                 </div>
                 <div class="input-control">
                     <label for="eventDescription"><strong>Description</strong></label>
-                    <textarea rows="5" placeholder="Enter description" id="eventDescription"
-                        name="eventDescription"></textarea>
+                    <textarea rows="5" placeholder="Enter description" id="eventDescription" name="eventDescription"></textarea>
                     <div class="error"></div>
                 </div>
                 <div class="input-control">
@@ -82,7 +81,7 @@
                     <input id="imageFile" name="imageFile" type="file">
                     <div class="error"></div>
                 </div>
-                <button type="submit"><strong>Sign Up</strong></button>
+                <button type="submit"><strong>Create</strong></button>
 
             </form>
         </div>
