--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,7 +16,7 @@
 
     <header>
         <a class="nav__links" href="/">
-            <h1 class="ani">Uni Auto</h1>
+            <h1 class="ani">UniAuto</h1>
         </a>
         <nav>
             <ul class="nav__links">
@@ -48,7 +48,7 @@
         </div>
     </div>
 
-    <main>
+    <main style="position: relative; top: -100px;">
         <div class="containerForm hidden c1">
             <form id="form" action="/login/submit" method="POST" autocomplete="off">
                 <h2><strong>Login</strong></h2>
@@ -67,7 +67,20 @@
             </form>
         </div>
 
+
+        <div class="container" style="position: relative; top: -200px;">
+            <div class="row justify-content-center">
+                <div class="col-sm-12 col-md-12 col-xlg-12">
+                    <section class="hidden c1 " style=" display: flex; align-items: center; justify-content: center;">
+                        <a class="cta bigger" href="/register"><button class="bigger">Registration</button></a>
+                    </section>
+                </div>
+            </div>
+        </div>
+
     </main>
+
+   
 
 </body>
 
