--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="row justify-content-center hidden">
                 <div class="col-sm-12 col-md-12 col-xlg-12" style="position:relative; top: 100px;">
-                    <h2 class="text-center">Welcome to the University Events Portal4</h2>
+                    <h2 class="text-center">Welcome to the University Events Portal</h2>
                 </div>
                 <div class="col-sm-6 col-md-8 col-xlg-10" style="position:relative; top: 100px;">
                     <p class="text-center">Enhance your university's event management capabilities with our cloud-based
