--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/main.css">
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script defer src="js/login.js"></script>
+    <script defer type="module" src="js/login.js"></script>
     <script defer src="js/Animation.js"></script>
+
+    <script type="module" src="js/login.js"></script>
+    
     <title>Test</title>
 </head>
 
@@ -50,7 +52,7 @@
 
     <main style="position: relative; top: -100px;">
         <div class="containerForm hidden c1">
-            <form id="form" action="/login/submit" method="POST" autocomplete="off">
+            <form id="form" action="" method="POST" autocomplete="off">
                 <h2><strong>Login</strong></h2>
                 <div class="input-control">
                     <label for="email"><strong>Email</strong></label>
@@ -77,6 +79,17 @@
                 </div>
             </div>
         </div>
+
+        <div class="container" style="position: relative; top: -120px;">
+            <div class="row justify-content-center">
+                <div class="col-sm-12 col-md-12 col-xlg-12">
+                    <section class="hidden c1 " style=" display: flex; align-items: center; justify-content: center;">
+                        <a class="cta bigger" id="googleSignOn"><button  type="submit" class="bigger">Google</button></a>
+                    </section>
+                </div>
+            </div>
+        </div>
+
 
     </main>
 
