--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 <body>
 
     <header>
-        <a class="nav__links" href="/">
+        <a class="nav__links_home" href="/">
             <h1 class="ani">Uni Auto</h1>
         </a>
         <nav>
@@ -27,6 +27,23 @@
             </ul>
         </nav>
         <a class="cta" href="/contacts"><button>Contact</button></a>
+
+        <div class="hamburger-menu" style="background-color: transparent; width: 50px;">
+            <input id="menu__toggle" type="checkbox" />
+            <label class="menu__btn" for="menu__toggle">
+                <span class="asad"></span>
+            </label>
+
+            <ul class="menu__box">
+                <li><a class="menu__item" href="/login">login</a></li>
+                <li><a class="menu__item" href="/events">Events</a></li>
+                <li><a class="menu__item" href="/attendance">Attendance</a></li>
+                <li><a class="menu__item" href="/report">Report</a></li>
+                <li><a class="menu__item " href="/contacts"><button class="ext_btn">Contact</button></a></li>
+            </ul>
+        </div>
+
+
     </header>
     <main>
         <div class="container">
@@ -36,7 +53,8 @@
                 </div>
                 <div class="col-sm-6 col-md-8 col-xlg-10" style="position:relative; top: 100px;">
                     <p class="text-center">Enhance your university's event management capabilities with our cloud-based
-                        platform, designed to streamline event organization, registration, and attendance tracking for both
+                        platform, designed to streamline event organization, registration, and attendance tracking for
+                        both
                         faculty and students.</p>
                 </div>
             </div>
@@ -50,7 +68,8 @@
                         <div class="card-body">
                             <h5>Effortless Event Creation</h5>
                             <p class="card-text">Faculty members can effortlessly create and manage events, including
-                                specifying event details, setting registration deadlines, and configuring event visibility.
+                                specifying event details, setting registration deadlines, and configuring event
+                                visibility.
                                 A user-friendly interface ensures a smooth event creation process.</p>
                         </div>
                     </div>
@@ -61,7 +80,8 @@
                             <h5>Seamless Event Registration:</h5>
                             <p class="card-text">Students can easily register for events, view event details, and manage
                                 their registrations through a user-friendly portal. The platform provides a streamlined
-                                registration process, eliminating the hassle of paper-based forms and manual data entry.</p>
+                                registration process, eliminating the hassle of paper-based forms and manual data entry.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -69,7 +89,8 @@
                     <div class="card text-center h-100 hidden c2" style="background-color: #32333a">
                         <div class="card-body">
                             <h5>Comprehensive Event Visibility</h5>
-                            <p class="card-text">Gain real-time insights into event attendance and registered users. View a
+                            <p class="card-text">Gain real-time insights into event attendance and registered users.
+                                View a
                                 comprehensive list of registered attendees, track event participation, and analyze
                                 registration trends to enhance event planning and decision-making.</p>
                         </div>
@@ -99,7 +120,8 @@
                     <div class="card text-center h-100 hidden c3" style="background-color: #32333a">
                         <div class="card-body">
                             <h5>Enhanced Collaboration and Engagement</h5>
-                            <p class="card-text">Foster a vibrant campus community by facilitating event participation and
+                            <p class="card-text">Foster a vibrant campus community by facilitating event participation
+                                and
                                 collaboration. Our platform enables students to discover events aligned with their
                                 interests, connect with peers, and engage in extracurricular activities.</p>
                         </div>
@@ -110,7 +132,8 @@
                         <div class="card-body">
                             <h5>Optimize Your University's Event Management</h5>
                             <p class="card-text">Our cloud-based platform simplifies event management, enhances student
-                                engagement, and empowers faculty to organize impactful events that contribute to a vibrant
+                                engagement, and empowers faculty to organize impactful events that contribute to a
+                                vibrant
                                 campus life.</p>
                         </div>
                     </div>
@@ -118,7 +141,7 @@
             </div>
         </div>
     </main>
-        
+
 </body>
 
 </html>
