--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -1,6 +1,6 @@
 $charcoal: #24252A;
 $offwhite: #edf0f1;
-$teal: hsl(192, 100%, 33%);
-$offteal: rgba(0,136,169,1);
+$teal: #4f79a3;
+$offteal: #7A93AC;
 $correct: #09c372;
 $error: #ff3860;
