--- a/views/login.ejs
+++ b/views/login.ejs
@@ -77,11 +77,21 @@
                     <input id="password" name="password" type="password">
                     <div class="error"></div>
                 </div>
-                <button id="submitBtn" type="submit"><strong>Sign Up</strong></button>
+                <button id="submitBtn" type="submit"><strong>Sign In</strong></button>
 
             </form>
         </div>
 
+
+        <div class="container" style="position: relative; top: -250px;">
+            <div class="row justify-content-center">
+                <div class="col-sm-12 col-md-12 col-xlg-12">
+                    <section class="hidden c1 " style=" display: flex; align-items: center; justify-content: center;">
+                        <button type="button" class="login-with-google-btn bigger" > Sign in with Google </button>
+                    </section>
+                </div>
+            </div>
+        </div>
 
         <div class="container" style="position: relative; top: -200px;">
             <div class="row justify-content-center">
