--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -47,7 +47,7 @@
         border: none;
         border-radius: 4px;
         &:hover{
-            background-color: rgba(0,136,169,0.8);
+            background-color: $teal;
         }
 
     }
@@ -74,7 +74,7 @@
             border: none;
             border-radius: 4px;
             &:hover{
-                background-color: rgba(0,136,169,0.8);
+                background-color: $teal;
             }
     
         }
