--- a/views/events.ejs
+++ b/views/events.ejs
@@ -81,8 +81,10 @@
                 <thead>
                     <tr>
                         <th scope="col"></th>
+                        <th scope="col">Category</th>
                         <th scope="col">Name</th>
                         <th scope="col">Location</th>
+                        <th scope="col">Date</th>
                         <th scope="col">Image</th>
                         <th scope="col">Description</th>
                         <th scope="col">Actions</th>
@@ -91,23 +93,29 @@
                 <tbody>
                     <tr>
                         <th scope="row">1</th>
+                        <td>Sports</td>
                         <td>Swimming</td>
                         <td>Canada Water</td>
+                        <td>08/01/24</td>
                         <td>No_Image</td>
                         <td>We will be swimming on the day</td>
                         <td>Join now</td>
                     </tr>
                     <tr>
                         <th scope="row">2</th>
+                        <td>Games/Gaming</td>
                         <td>MiniGolf</td>
                         <td>Oxfrod-Street</td>
+                        <td>07/01/24</td>
                         <td>No_Image</td>
                         <td>We will be MiniGolfing on the day</td>
                         <td>Join now</td>
                     </tr>
                     <tr>
                         <th scope="row">3</th>
+                        <td>Food/Drinks</td>
                         <td>Bar-Hopping</td>
+                        <td>11/01/24</td>
                         <td>Angle</td>
                         <td>No_Image</td>
                         <td>We will be drink alot on the day</td>
