--- a/views/attendance.ejs
+++ b/views/attendance.ejs
@@ -73,8 +73,10 @@
                 <thead>
                     <tr>
                         <th scope="col"></th>
+                        <th scope="col">Category</th>
                         <th scope="col">Name</th>
                         <th scope="col">Location</th>
+                        <th scope="col">Date</th>
                         <th scope="col">Image</th>
                         <th scope="col">Description</th>
                         <th scope="col">Actions</th>
@@ -83,8 +85,10 @@
                 <tbody>
                     <tr>
                         <th scope="row">1</th>
+                        <td>Sports</td>
                         <td>Swimming</td>
                         <td>Canada Water</td>
+                        <td>08/01/24</td>
                         <td>No_Image</td>
                         <td>We will be swimming on the day</td>
                         <td>Remove</td>
