--- a/views/login.ejs
+++ b/views/login.ejs
@@ -93,11 +93,21 @@
             </div>
         </div>
 
-        <div class="container" style="position: relative; top: -200px;">
+        <div class="container" style="position: relative; top: -220px;">
             <div class="row justify-content-center">
                 <div class="col-sm-12 col-md-12 col-xlg-12">
                     <section class="hidden c1 " style=" display: flex; align-items: center; justify-content: center;">
                         <a class=" bigger" href="/register"><button class="bigger">Registration</button></a>
+                    </section>
+                </div>
+            </div>
+        </div>
+
+        <div class="container" style="position: relative; top: -190px;">
+            <div class="row justify-content-center">
+                <div class="col-sm-12 col-md-12 col-xlg-12">
+                    <section class="hidden c1 " style=" display: flex; align-items: center; justify-content: center;">
+                        <a class=" bigger"><button class="bigger sign-out-btn">Sign Out</button></a>
                     </section>
                 </div>
             </div>
